...

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/userName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
...

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/userEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
...

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/userMobile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/userAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
...

            <Button
                android:id="@+id/isuRegistrationToggle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:text="Add/Delete" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/isuRegistrationSection"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
...

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/isuGivenName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/isuMiddleName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/isuSurname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/isuNetId"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...

                <Button
                    android:id="@+id/instructorToggle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...
            </LinearLayout>
            <LinearLayout
                android:id="@+id/instructorSection"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
...

                    <Spinner
                        android:id="@+id/instructorDepartment"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
...

                <Button
                    android:id="@+id/advisorToggle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...
            </LinearLayout>
            <LinearLayout
                android:id="@+id/advisorSection"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
...

                    <Spinner
                        android:id="@+id/advisorDepartment"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
...

                <Button
                    android:id="@+id/studentToggle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...
            </LinearLayout>
            <LinearLayout
                android:id="@+id/studentSection"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
...

                    <Spinner
                        android:id="@+id/studentAdvisor"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
...
        </LinearLayout>
        <Button
            android:id="@+id/Save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
...
